fixed navbar css and styled scrollbar

--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -1,6 +1,10 @@
 
 /* Custom styles for the dashboard */
-
+.show-login{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 .section-title {
     margin-bottom: 20px;
