--- a/client/css/style.css
+++ b/client/css/style.css
@@ -5,6 +5,30 @@ body {
   min-height: 100vh;
  }
 
+/* width */
+::-webkit-scrollbar {
+  width: 0.3vw;
+
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0505540f; 
+  border-radius: 1em;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #0a0f341c; 
+  border-radius: 1em;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(21, 7, 52, 0.37); 
+  border-radius: 1em;
+}
+
  .center{
   margin: auto;
   position: absolute;
@@ -106,10 +130,7 @@ body {
   background: #d8d8d8;
 }
 
-.nav-toggle-btn{
-  position: absolute;
-  z-index: 3;
-}
+
 
 /*.nav_button:hover{
   color: rgb(5, 5, 18)!important;
@@ -123,6 +144,8 @@ body {
 }*/
 
  #nav{
+
+
   height: 95vh;
   width: 25%;
   margin-left: -30%;
@@ -135,20 +158,54 @@ body {
 
  }
 
-#nav.nav-transition{
+nav.nav-transition{
   margin-left: -3%;
 }
 
 .nav-button-list{
+  display: flex;
+  flex-direction: column;
+  height: 75vh;
+  margin-top: 4em;
+  margin-right: 2em;
   padding: 1em;
-  margin-top: 3em;
-  overflow:hidden
+  overflow-y:scroll;
+  overflow-x: hidden;
 }
 
-#nav-btn{
-  display:block;
+.nav-item{
+  /*box-shadow: 0em 0.2em 0.5em rgba(0, 0, 0, 0.195);*/
+  margin-left: 1.5em;
+  margin-top: 1em;
+  padding: 1.5em;
+  font-size: 150% !important;
+  text-align: start !important;
+}
+
+#open-nav-btn{
   color: white;
-  padding: 1em;
+  margin-top: 1em;
   margin-left: 1em;
- list-style-type: none;
+}
+
+#logout-btn{
+  background: #0c82ff !important;
+  border-color: #007bff00;
+  margin-top: -0.4em;
+  margin-left: 4vw;
+
+  transition: background 0.2s ease;
+    -webkit-transition: background 0.2s ease;
+    -moz-transition: background 0.2s ease;
+    -o-transition: background 0.2s ease;
+    -ms-transition: background 0.2s ease;
+}
+
+#logout-btn:hover{
+  background: #3496ff !important;
+}
+
+.nav-toggle-btn{
+  position: absolute;
+  z-index: 3;
 }
